# portal-solutions-ai-interface

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  types.rs
xtp/: Cargo.toml  xtp.toml
xtp/src/: lib.rs
