[package]
name = "portal-solutions-ai-interface-xtp"
version = "0.1.0"
edition = "2021"


[lib]
name = "plugin"
crate-type = ["cdylib"]

[dependencies]
extism-pdk.workspace = true   #= "1.1.0"
chrono.workspace = true       #= { version = "0.4", features = ["serde"] }
serde.workspace = true        # = { version = "1.0", features = ["derive"] }
serde_json.workspace = true   #= "1.0"
base64-serde.workspace = true # = "0.7"
base64.workspace = true       # = "0.21"
portal-solutions-ai-interface = { version = "0.1.0", path = ".." }
